# imobili-rio-

./: .env.example  .gitignore  CONTRIBUTING.md  PRODUCTION_READINESS.md  PRODUCTION_STATUS.md  README.md  docker-compose.prod.yml  docker-compose.yml  find_emojis.py  pytest.ini  sitecustomize.py  start.bat  start.sh
realestate_engine/: .env.example  .gitignore  Dockerfile  ENTRY_POINTS.md  README.md  alembic.ini  main.py  main_engine.py  pyproject.toml  requirements.txt
realestate_engine/.github/workflows/: ci-cd.yml  terraform.yml
realestate_engine/api/: README.md  __init__.py  main.py
realestate_engine/api/middleware/: auth.py  rate_limit.py  security_headers.py
realestate_engine/api/routers/: auth.py  explain.py  health.py  listings.py  meta.py  scoring.py  valuation.py
realestate_engine/api/schemas/: __init__.py  listings.py  scoring.py  valuation.py
realestate_engine/cache/: __init__.py  model_cache.py  redis_cache.py
realestate_engine/core/: __init__.py  interfaces.py
realestate_engine/cv/: __init__.py  image_quality.py  image_similarity.py  room_detector.py
realestate_engine/dashboard/: app.py
realestate_engine/dashboard/components/: charts.py  tables.py
realestate_engine/dashboard/utils/: formatting.py  (+3 more)
realestate_engine/database/: base_repository.py  models.py  repository.py  schema.sql
realestate_engine/etl/: data_quality_tracker.py  dead_letter_queue.py  deduplicator.py  enricher.py  fuzzy_deduplicator.py  geocoder.py  normalizer.py  pipeline_etl.py  poi_client.py  schemas.py  validator.py  validators.py
realestate_engine/features/: __init__.py  analytics_engine.py  micro_location.py  nlp_portuguese.py  store.py
realestate_engine/infrastructure/: bootstrap.py  event_bus.py  metrics_exporter.py  migrate_to_postgres.py  prometheus.yml  redis_client.py  worker.py
realestate_engine/investor_tools/: __init__.py  listing_janitor.py  opportunity_analyzer.py
realestate_engine/meta/: ARCHITECTURE.md  __init__.py  benchmark.py  tech_audit_engine.py
realestate_engine/migrations/: env.py
realestate_engine/monitoring/: alert_manager.py  cost_tracker.py  data_quality.py  health_checks.py  intelligent_alerts.py  metrics.py  model_monitor.py
realestate_engine/nlp/: __init__.py  bert_portuguese.py  sentiment_analyzer.py
realestate_engine/notification/: best_opportunity_selector.py  message_formatter.py  notification_engine.py  opportunity_selector.py  telegram_bot.py
realestate_engine/quality/: __init__.py  quality_5d_system.py
realestate_engine/scheduler/: circuit_breakers.py  long_running_scheduler.py  orchestrator.py  single_best_scheduler.py
realestate_engine/scoring/: rationale_generator.py  red_flags_detector.py  score_amenities_calculator.py  score_condition_calculator.py  score_discount_calculator.py  score_freshness_calculator.py  score_liquidity_calculator.py  score_location_calculator.py  scoring_engine.py  weighted_score_calculator.py
realestate_engine/scraping/: browser_resolver.py  free_proxy_provider.py  health_monitor.py  http_client.py  national_scraping_system.py  portal_rate_limiter.py  proxy_manager.py  proxy_validator.py  session_manager.py  spider_config.py  spider_manager.py  spider_registry.py  stealth_manager.py  user_agent_rotator.py
realestate_engine/security/: audit_logger.py  encryption.py  input_validator.py  secret_manager.py  secrets_manager.py
realestate_engine/terraform/: README.md  main.tf
realestate_engine/tests/: conftest.py
realestate_engine/utils/: __init__.py  cache_manager.py  config.py  date_utils.py  decorators.py  error_tracker.py  helpers.py  job_logger.py  logger.py  logging.py  logging_setup.py  logging_utils.py  secrets_manager.py  text_parsers.py  url_utils.py
realestate_engine/valuation/: advanced_ensemble.py  comps_engine.py  confidence_interval.py  hedonic_model.py  ine_client.py  lightgbm_model.py  model_trainer.py  neural_network_model.py  stacking_ensemble.py  valuation_engine.py  weighted_ensemble.py  xgboost_model.py
(+319 files in other folders)
